Refactor domain model and implement provider management
Replaced outdated domain model with a UUID-based structure and refactored entities for consistency. Introduced new BaseEntity and BaseService to streamline logic across models. Added provider management modules, including related DTOs, mappers, services, and resources, and expanded database schema with new tables and auditing support.

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <java.version>17</java.version>
         <jjwt.version>0.11.5</jjwt.version>
         <liquibase.version>4.31.0</liquibase.version>
+        <mapstruct.version>1.6.3</mapstruct.version>
     </properties>
     <dependencies>
         <dependency>
@@ -86,6 +87,13 @@
             <version>${jjwt.version}</version>
         </dependency>
 
+        <!-- Mapstruct -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -133,6 +141,11 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${mapstruct.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
