--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,4 +29,4 @@ spring:
 
   liquibase:
     enabled: true
-    change-log: classpath:/db/changelog/master.yaml
+    change-log: classpath:/db/changelog/master.yml
