`Add MinIO, QueryDSL integration, and new database schema`
Reorganized database schema with improved default values and constraints, including a recreated app_user table. Integrated MinIO for file storage management and QueryDSL for advanced query capabilities. Enhanced backend services with new FileService and FileResource for file handling.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,21 @@
+app:
+  auth-redirect-url:
+  jwt-secret-key:
+
 spring:
+  datasource:
+    url:
+    username:
+    password:
+    driver-class-name: org.postgresql.Driver
+
   security:
     oauth2:
       client:
         registration:
           google:
-            client-id: changeme
-            client-secret: changeme
+            client-id:
+            client-secret:
             scope:
               - openid
               - profile
@@ -18,15 +28,15 @@ spring:
             user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
             user-name-attribute: sub
 
-  datasource:
-    url: jdbc:postgresql://localhost:5432/goldrush
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
-
   jpa:
     open-in-view: false
 
   liquibase:
     enabled: true
     change-log: classpath:/db/changelog/master.yml
+
+minio:
+  url:
+  accessKey:
+  secretKey:
+  bucketName:
