--- a/src/main/resources/db/changelog/2025/02/17-01-changelog.yaml
+++ b/src/main/resources/db/changelog/2025/02/17-01-changelog.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 1739778352486-1
+      id: 1739797634387-1
       author: polle
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -11,7 +11,6 @@ databaseChangeLog:
                     nullable: false
                     primaryKey: true
                     primaryKeyName: pk_app_user
-                  defaultValueComputed: gen_random_uuid()
                   name: id
                   type: UUID
               - column:
@@ -58,7 +57,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
             tableName: app_user
   - changeSet:
-      id: 1739778352486-2
+      id: 1739797634387-2
       author: polle
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -69,7 +68,6 @@ databaseChangeLog:
                     nullable: false
                     primaryKey: true
                     primaryKeyName: pk_country
-                  defaultValueComputed: gen_random_uuid()
                   name: id
                   type: UUID
               - column:
@@ -107,7 +105,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
             tableName: country
   - changeSet:
-      id: 1739778352486-3
+      id: 1739797634387-3
       author: polle
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -118,7 +116,6 @@ databaseChangeLog:
                     nullable: false
                     primaryKey: true
                     primaryKeyName: pk_inquiry
-                  defaultValueComputed: gen_random_uuid()
                   name: id
                   type: UUID
               - column:
@@ -172,6 +169,9 @@ databaseChangeLog:
                   name: remarks
                   type: VARCHAR(255)
               - column:
+                  name: country_id
+                  type: UUID
+              - column:
                   name: destination
                   type: VARCHAR(255)
               - column:
@@ -208,7 +208,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
             tableName: inquiry
   - changeSet:
-      id: 1739778352486-4
+      id: 1739797634387-4
       author: polle
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -217,18 +217,16 @@ databaseChangeLog:
               - column:
                   constraints:
                     nullable: false
-                  defaultValueComputed: gen_random_uuid()
                   name: inquiry_id
                   type: UUID
               - column:
                   constraints:
                     nullable: false
-                  defaultValueComputed: gen_random_uuid()
                   name: provider_quotation_id
                   type: UUID
             tableName: inquiry_provider_quotations
   - changeSet:
-      id: 1739778352486-5
+      id: 1739797634387-5
       author: polle
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -239,7 +237,6 @@ databaseChangeLog:
                     nullable: false
                     primaryKey: true
                     primaryKeyName: pk_provider
-                  defaultValueComputed: gen_random_uuid()
                   name: id
                   type: UUID
               - column:
@@ -283,7 +280,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
             tableName: provider
   - changeSet:
-      id: 1739778352486-6
+      id: 1739797634387-6
       author: polle
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -294,7 +291,6 @@ databaseChangeLog:
                     nullable: false
                     primaryKey: true
                     primaryKeyName: pk_providerquotation
-                  defaultValueComputed: gen_random_uuid()
                   name: id
                   type: UUID
               - column:
@@ -327,7 +323,6 @@ databaseChangeLog:
               - column:
                   constraints:
                     nullable: false
-                  defaultValueComputed: gen_random_uuid()
                   name: provider_id
                   type: UUID
               - column:
@@ -355,7 +350,7 @@ databaseChangeLog:
                   type: VARCHAR(255)
             tableName: provider_quotation
   - changeSet:
-      id: 1739778352486-7
+      id: 1739797634387-7
       author: polle
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -364,7 +359,7 @@ databaseChangeLog:
             constraintName: uc_inquiry_provider_quotations_provider_quotation
             tableName: inquiry_provider_quotations
   - changeSet:
-      id: 1739778352486-8
+      id: 1739797634387-8
       author: polle
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -375,7 +370,18 @@ databaseChangeLog:
             indexName: idx_9aa84f460c309ef7dc79143b2
             tableName: app_user
   - changeSet:
-      id: 1739778352486-9
+      id: 1739797634387-9
+      author: polle
+      objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
+      changes:
+        - addForeignKeyConstraint:
+            baseColumnNames: country_id
+            baseTableName: inquiry
+            constraintName: FK_INQUIRY_ON_COUNTRY
+            referencedColumnNames: id
+            referencedTableName: country
+  - changeSet:
+      id: 1739797634387-10
       author: polle
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -386,7 +392,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: provider
   - changeSet:
-      id: 1739778352486-10
+      id: 1739797634387-11
       author: polle
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
@@ -397,7 +403,7 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: inquiry
   - changeSet:
-      id: 1739778352486-11
+      id: 1739797634387-12
       author: polle
       objectQuotingStrategy: QUOTE_ONLY_RESERVED_WORDS
       changes:
