Add exchange rate feature and integrate with caching
Implemented a new exchange rate retrieval functionality using OpenFeign clients, with response caching configured via Ehcache. Added DTOs, services, and controllers for the feature. Updated ProviderQuotation and Inquiry model relationships, Spring Cloud dependencies, and application configurations.

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,19 @@
         <mapstruct.version>1.6.3</mapstruct.version>
         <minio.version>8.4.3</minio.version>
         <querydsl-openfeign.version>6.10.1</querydsl-openfeign.version>
+        <spring-cloud.version>2024.0.0</spring-cloud.version>
     </properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -113,6 +125,22 @@
             <groupId>io.github.openfeign.querydsl</groupId>
             <artifactId>querydsl-jpa</artifactId>
             <version>${querydsl-openfeign.version}</version>
+        </dependency>
+
+        <!-- OpenFeign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <!-- Cache -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
         </dependency>
 
         <dependency>
